--- a/cfgs/default/4m/alphas_mixture/main/mix_mod7_all2all_rgb2dense_a0.5.yaml
+++ b/cfgs/default/4m/alphas_mixture/main/mix_mod7_all2all_rgb2dense_a0.5.yaml
@@ -1,7 +1,7 @@
 # Half of all samples from this mixture are rgb2dense, half are all2all
-rgb@224:
-  input_alphas: [1000.0, 0.5]
-  target_alphas: [0., 0.]  # RGB is not a target
+rgb@224: # num cols is the number of sampling strategies to try.
+  input_alphas: [1000.0, 0.5] # NOTE: input alphas: how much weight to put on the input modalities for encoding.
+  target_alphas: [0., 0.]  # RGB is not a target # NOTE: target alphas - how much weight to put on the modalities to be unmasked/sampled during decoding.
 tok_rgb@224:
   input_alphas: [0., 0.5]
   target_alphas: [0.5, 0.5]
