--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "tqdm>=4.64.1",
     "wandb>=0.13.5",
     "webdataset>=0.2.86",
+    "jsonlines",
 ]
 
 [project.optional-dependencies]
