--- a/cfgs/default/4m/data/video/mix_mod3_rgb_tok_to_all_a0.5.yaml
+++ b/cfgs/default/4m/data/video/mix_mod3_rgb_tok_to_all_a0.5.yaml
@@ -4,8 +4,8 @@ train:
       type: multimodal
 
       # Input and output domain names, separated by hyphen
-      in_domains: video_rgb@224-video_tok_rgb@224-video_det
-      out_domains: video_rgb@224-video_tok_rgb@224-video_det
+      in_domains: video_rgb@224-video_tok_rgb@224
+      out_domains: video_rgb@224-video_tok_rgb@224
 
       # Dirichlet alphas concentration parameter for input and output. 
       # Can be either one value, or one value per input modality separated by hyphen.
@@ -13,7 +13,7 @@ train:
       target_alphas: null
       # Path to specific alphas configuration to enable mixture of Dirichlets. 
       # If provided, overrides input_alphas and target_alphas
-      alphas_config: "cfgs/default/4m/alphas_mixture/video/mix_mod3_rgb_tok_det_a0.5.yaml"
+      alphas_config: "cfgs/default/4m/alphas_mixture/video/mix_mod3_rgb_tok_a0.5.yaml"
 
       # Optionally, min_input_tokens, min_target_tokens, num_input_tokens, num_target_tokens can be specified here
       # If so, they will override the values provided in the main config
@@ -21,7 +21,7 @@ train:
       # Data can either be local or on cloud storage (e.g. S3), see data docs for more info
       # Use braceexpand notation to indicate shard range (e.g. shard-{0000..9999}.tar)
       # Use brackets to indicate multiple modalities (e.g. [modality1,modality2,modality3]) 
-      data_path: '/store/swissai/a08/data/4m/train/[video_rgb,video_rgb_tok,video_det]/shard-{00000..00100}.tar' # TODO: need to reformat the data correctly here. 
+      data_path: '/store/swissai/a08/data/4m/train/[video_rgb,video_rgb_tok]/shard-{00000..00100}.tar' # TODO: need to reformat the data correctly here. 
       use_wds: True # Use webdataset
       wds_n_repeats: 4 # Number of repeats for webdataset loader to improve efficiency
       wds_shuffle_buffer_tar: 1_000 # Webdatasets shuffle buffer after loading tar files
@@ -41,4 +41,4 @@ train:
 val:
   datasets:
     my_video_dataset: 
-      data_path: '/store/swissai/a08/data/4m/val/[video_rgb,video_rgb_tok,video_det]/shard-{00000..00100}.tar'
+      data_path: '/store/swissai/a08/data/4m/val/[video_rgb,video_rgb_tok]/shard-{00000..00100}.tar'
